Add the audit logs for V2 RBAC
